<resources>
    <string name="app_name">Spiral</string>
    <string name="spiral">Spiral</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_choose">or choose</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_for_free">Register for free</string>
    <string name="passkey_sign_in">Passkey Sign in</string>
    <string name="place_your_finger_on_the_sensor_to_continue">Place your finger on the sensor to continue</string>
    <string name="authentication_successful">Authentication Successful</string>
    <string name="redirecting_you_to_your_account">Redirecting you to your account</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="developer">Developer</string>
    <string name="phone_number">Phone Number</string>
    <string name="career">Career</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="nairobi">Nairobi</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_field_is_required">Password field is required</string>
    <string name="email_field_is_required">Email field is required</string>
    <string name="your_email">Your Email</string>
    <string name="authenticate_with_fingerprint">Authenticate with Fingerprint</string>
    <string name="cancel">Cancel</string>
    <string name="fingerprint_sensor_not_found">FIngerPrint Sensor not found</string>
    <string name="good_morning">Good Morning,</string>
    <string name="general_doctor">General Doctor</string>
    <string name="frequently_used">Frequently Used</string>
    <string name="financial_services">Financial Services</string>
    <string name="view_all">View all</string>
    <string name="category">Category</string>
    <string name="caller_id">Caller ID</string>
    <string name="sunday_12_june">Sunday, 12 June</string>
    <string name="_11_00_12_00_am">11:00 - 12:00 AM</string>
    <string name="dr_a_syahir">Dr. a Syahir</string>
    <string name="other">Other</string>
    <string name="cooking">Cooking</string>
    <string name="hangout">Hangout</string>
    <string name="meeting">Meeting</string>
    <string name="weekend">Weekend</string>
</resources>