<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_border"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/spiral"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_check"/>
        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/authentication_successful"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/redirecting_you_to_your_account"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>


</LinearLayout>