<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="3dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_frame" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="Jane Doe"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/developer"
            android:textColor="@color/grey"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/your_email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter_medium"
            android:hint="John@gmail.com"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black_light"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:drawableStart="@drawable/ic_call_"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter_medium"
            android:hint="123456"
            android:inputType="phone"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"

            android:textColor="@color/black_light"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/career"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/developer"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"

            android:textColor="@color/black_light"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/nairobi"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"

            android:textColor="@color/black_light"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_light_blue"
            android:fontFamily="@font/inter_semibold"
            android:paddingVertical="12dp"
            android:text="@string/save_changes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>