<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_border"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/spiral"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/inter_medium"
                android:hint="John@gmail.com"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/black_light"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:background="@null"
                android:fontFamily="@font/inter_medium"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black_light"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_light"
            android:backgroundTint="@color/navy_blue"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_semibold"
            android:paddingVertical="12dp"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/or_choose"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <LinearLayout

            android:id="@+id/ll_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_light"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_thumb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_semibold"
                android:text="Sign in with Passkey"
                android:textColor="@color/navy_blue"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_light"
                android:backgroundTint="@color/white"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_light"
                android:backgroundTint="@color/white"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_github" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/don_t_have_an_account_yet"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/register_for_free"
                android:textColor="@color/see_green"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>