<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_border"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/spiral"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/passkey_sign_in"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/place_your_finger_on_the_sensor_to_continue"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_marginVertical="25dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_scan"/>
        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_light"
            android:backgroundTint="@color/navy_blue"
            android:fontFamily="@font/inter_semibold"
            android:paddingVertical="12dp"
            android:text="Cancel"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>